debug parameters